# qq_gomocup_bot

./: .env  .env.dev  .gitignore  LICENSE  README.md  bot.py  pyproject.toml
gomocupbot/plugins/gomocup/: __init__.py  gomocup.py
gomocupbot/plugins/gomocup/api/: chess.py
gomocupbot/plugins/gomocup/utils/: util.py
src/: config.py
src/api/: chess.py
src/plugins/: gomocup.py
